[package]
name = "rust-bot"
version = "0.1.0"
authors = ["Daniel <Daniel.Milholland@icloud.com>"]
edition = "2021"

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs.git" }
serde_json = "1.0.107"
rand = "0.8.5"
xi-unicode = "0.3.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
